tests/tests/snapshots/integration__run_images@underrlay_align_offset2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/underrlay_align_offset2.gleam
---
<svg width="170.0" height="170.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <g>
          <path d="M 0.0 84.8528137423857 L 84.85281374238569 0.0 L 169.70562748477138 84.8528137423857 L 84.85281374238569 169.7056274847714 Z" fill="rgba(0, 0, 128, 1.0)" />
          <path d="M 51.13337091666135 16.0 L 86.2667418333227 56.54607146153242 L 41.13337091666135 85.55152771773473 L 18.846296765465702 36.74964262391376 L 70.3232303889513 21.634651136828598 L 77.95844157328497 74.73871136862277 L 24.30830026003773 74.73871136862279 L 31.943511444371378 21.63465113682861 L 83.420445067857 36.74964262391376 L 61.13337091666135 85.55152771773473 L 16.0 56.54607146153242 Z" fill="rgba(100, 149, 237, 1.0)" />
        </g>
        <path d="M 118.57225656811003 16.0 L 153.70562748477138 56.54607146153242 L 108.57225656811003 85.55152771773473 L 86.28518241691438 36.74964262391376 L 137.76211604039997 21.634651136828598 L 145.39732722473366 74.73871136862277 L 91.74718591148641 74.73871136862279 L 99.38239709582007 21.63465113682861 L 150.8593307193057 36.74964262391376 L 128.57225656811005 85.55152771773473 L 83.43888565144869 56.54607146153242 Z" fill="rgba(100, 149, 237, 1.0)" />
      </g>
      <path d="M 51.13337091666135 84.15409976703668 L 86.2667418333227 124.7001712285691 L 41.13337091666135 153.7056274847714 L 18.846296765465702 104.90374239095044 L 70.3232303889513 89.78875090386528 L 77.95844157328497 142.89281113565946 L 24.30830026003773 142.89281113565949 L 31.943511444371378 89.78875090386529 L 83.420445067857 104.90374239095044 L 61.13337091666135 153.7056274847714 L 16.0 124.7001712285691 Z" fill="rgba(100, 149, 237, 1.0)" />
    </g>
    <path d="M 118.57225656811003 84.15409976703668 L 153.70562748477138 124.7001712285691 L 108.57225656811003 153.7056274847714 L 86.28518241691438 104.90374239095044 L 137.76211604039997 89.78875090386528 L 145.39732722473366 142.89281113565946 L 91.74718591148641 142.89281113565949 L 99.38239709582007 89.78875090386529 L 150.8593307193057 104.90374239095044 L 128.57225656811005 153.7056274847714 L 83.43888565144869 124.7001712285691 Z" fill="rgba(100, 149, 237, 1.0)" />
  </g>
</svg>
