tests/tests/snapshots/integration__run_images@wedge1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/wedge1.gleam
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 40.0 L 40.0 40.0 A 40.0 40.0 0.0 0 0 0.0 0.0 Z" fill="rgba(255, 0, 0, 1.0)" />
</svg>
