tests/tests/snapshots/integration__run_images@world1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/world1.gleam
---
Image
Image
