tests/tests/snapshots/integration__run_tests@check_eq.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/check_eq.gleam
---
STDOUT
Running tests...
0 tests, 0 success(es), 0 failure(s) and 0 error(s).

STDERR
